# jsonpickle

./: .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yml  .travis.yml  BENCHMARKS.md  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASING.md  Rakefile  SECURITY.md  appveyor.yml  azure-pipelines.yml  conftest.py  encodeLambda.py  functionLambda.json  garden.yaml  install-pip-master.py  jsonpickle_benchmarks.py  main.js  mypy.ini  pickler.js  pin-pip.py  pyproject.toml  pytest.ini  requirements-2.txt  requirements-3.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yml  lint.yml  pythonpackage.yml  release.yml  test.yml
Play Environment/: jsonWithDillStuff.json  playCode.py  readBinary.py  save.pkl
Play Environment/Vulnerability Example/: exploit.json  exploit.py
benchmarking/: README.md  analyze_benchmarks.py  analyze_benchmarks.sh
contrib/: copy-docs  pyqt-reduce-handler.py
docs/: .gitignore  Makefile  api.rst  conf.py  contrib.rst  examples.rst  extensions.rst  history.rst  index.rst  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  contrib.rst  index.rst
examples/: README.md  changing_class_path.py  custom_handler_context.py  example.txt  np_pd_extensions.py  save_class_to_file.py  utilities.py
fuzzing/: README.md
fuzzing/dictionaries/: fuzz_unpickle.dict
fuzzing/fuzz-targets/: fuzz_unpickle.py  utils.py
fuzzing/oss-fuzz-scripts/: build.sh  container-environment-bootstrap.sh
jsonpickle/: __init__.py  _handlers.py  _samples.py  backend.py  compat.py  errors.py  handlers.py  pickler.py  pluginmgr.py  tags.py  tags_pd.py  unpickler.py  util.py  version.py
jsonpickle/ext/: gmpy.py  numpy.py  pandas.py  yaml.py
marie_work/: decodeLambda.py
src/: CHANGELOG  COPYING  README  benchmark.py  run_tests.py  setup.py
src/jsonpickle/: __init__.py  compat.py  pickler.py  tags.py  unpickler.py  util.py
src/jsonpickle/tests/: __init__.py  classes.py  jsonpickle_test.py  thirdparty_tests.py  util.py  util_tests.py
testEnvironment/: playingAround.py
testEnvironment/Vulnerability Example/: exploit.json  exploit.py  student.py
tests/: backend_test.py  backends_tests.py  benchmark.py  bson_test.py  collections_test.py  datetime_test.py  datetime_tests.py  document_test.py  ecdsa_test.py  feedparser_test.py  handler_test.py  handler_tests.py  helper.py  jsonpickle_test.py  numpy_test.py  object_test.py  pandas_test.py  requirements.txt  runtests.py  samples.py  sklearn_test.py  sqlalchemy_test.py  stdlib_test.py  test-req.txt  test.json  test_datetime.py  test_ext.py  test_handlers.py  test_project.py  thirdparty_test.py  thirdparty_tests.py  util_test.py  util_tests.py  wizard_test.py  zoneinfo_test.py
tests/originalTests/: bson_test.py  jsonpickle_test.py  pandas_test.py  runtests.py
