[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = jsonpickle
author = David Aguilar
author_email = davvid@gmail.com
description = Python library for serializing any arbitrary object graph into JSON
long_description = file:README.rst
url = https://github.com/jsonpickle/jsonpickle
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Programming Language :: Python
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: JavaScript
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
platforms =
	POSIX
	Windows
keywords =
	json pickle
	json
	pickle
	marshal
	serialization
	JavaScript Object Notation


# flake8 conflicts with black otherwise
[tool:pytest]
flake8-ignore = E501


[options]
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires =
	importlib_metadata; python_version<"3.8"
	setuptools<59; python_version>"3.10"
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8 >= 1.1.1
	pytest-black-multipy
	pytest-cov

	# local
	ecdsa
	feedparser
	gmpy2
	numpy
	pandas
	pymongo
	scikit-learn
	sqlalchemy

testing.libs =
	simplejson
	ujson

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
